# compleat-context

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cards.csv  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  nightly.yml
ccx/: __init__.py  cli.py  settings.py
ccx/commands/: build.py  build_spellbook.py
data/: manifest.json
tests/: __init__.py  test_build.py  test_build_spellbook.py  test_integration.py  test_settings.py
